--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "angular-chart.js": "^1.0.0-alpha8",
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
+    "chart.js": "^2.1.6",
     "cors": "^2.7.1",
     "express": "^4.14.0",
     "express-jwt": "^3.4.0",
     "jsonwebtoken": "^7.0.1",
     "mongoose": "^4.5.1",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "ngstorage": "^0.3.10"
   }
 }
